<resources>
    <string name="app_name" translatable="false">BringIt</string>
    <string name="facebook_app_id" translatable="false">436459696979103</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb436459696979103</string>
    <string name="btnCıkıs">Çıkış Yap </string>
    <string name="default_web_client_id" translatable="false">807087052495-a5avvfcjbql3c22mi25qehphobln4btv.apps.googleusercontent.com</string>
    <string name="google_maps_key" translatable="false">AIzaSyB4PvyN4bfmpjGGpI1Odfq01d60V91dPug</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="title_activity_offer" translatable="false">OfferActivity</string>
    <string name="title_activity_maps_new" translatable="false">Map</string>
    <string name="splashText" translatable="false">Bring It</string>
    <string name="tarih">Tarih</string>
    <string name="e_yan_n_bulundu_u_l">Eşyanın Bulunduğu İl</string>
    <string name="llce">İlçe</string>
    <string name="esyanin_gidecegi_il">Eşyanın Gideceği İl</string>
    <string name="esyanin_gidecegi_ilce">Eşyanın Gideceği İlçe</string>
    <string name="esyanin_cikacagi_kat_sayisi">Çıkılacak Kat Sayısı</string>
    <string name="aciklama">Açıklama</string>
    <string name="ilan_ver">İlan Ver</string>
    <string name="esyanin_tasinma_sekli">Eşya Taşınma Şekli</string>
    <string name="esyanin_basligi">Eşya Başlığı</string>
    <string name="baslik">Başlık</string>
    <string name="textview" translatable="false">TextView</string>
    <string name="reklam" translatable="false">Reklam</string>
    <string name="ilanlar">İlanlar</string>
    <string name="mesajlar">Mesajlar</string>
    <string name="hesap">Hesap</string>
    <string name="ayarla">Ayarla</string>
    <string name="bringit" translatable="false">BringIt</string>
    <string name="tvNameSurname" translatable="false">Empty</string>
    <string name="tasima">Taşıma</string>
    <string name="tvMail_account" translatable="false">example@gmail.com</string>
    <string name="tvPhone_account" translatable="false">+901234567890</string>
    <string name="tvWebSite_account" translatable="false">example.com</string>
    <string name="tvIlanNumber" translatable="false">0</string>
    <string name="tvTasimaNumber" translatable="false">0</string>
    <string name="tamam">Tamam</string>
    <string name="kapat">kapat</string>
    <string name="kat_sayisi">Kat Sayısı</string>
    <string name="mail_adresi">Mail Adresi</string>
    <string name="tel_no">Tel No</string>
    <string name="web_sitesi">Web Sitesi</string>
    <string name="kaydet">Kaydet</string>
    <string name="iptal">İptal</string>
    <string name="veriler_alinamadi">Veriler Alınamadı!</string>
    <string name="location_izin_Ver">Lütfen izin verin!</string>
    <string name="kayit_basarisiz">Kayıt Başarısız Oldu!</string>
    <string name="basariya_kaydedildi">Başarıyla Kaydedildi!</string>
    <string name="eksik_bilgiler">Eksik Bilgiler Girdiniz!</string>
    <string name="mesaj_yazma">Bir Mesaj Gönderin!</string>
    <string name="gece_modu">Gece Modu</string>
    <string name="mesaj">Mesaj</string>
    <string name="il">İl</string>
    <string name="tasinma_bilgileri">Taşınma Bilgileri</string>
    <string name="ilan_detay">İlan Detayı</string>
    <string name="bilgiler">Bilgiler</string>
    <string name="teklif_ver">Teklif Verin</string>
    <string name="ilan_yayınla">İlan Verin</string>
    <string name="tv_slider">Bring It, eşyalarınızı kolay, ucuz ve güvenli bir şekilde taşımanızı kolaylaştırır. İlanları, konumunuza göre listeler.</string>
    <string name="tv_slider1">Taşınıyorsanız veya eşyalarınızı bir yere götürmek istiyorsanız, kolayca ilan verin ve nakliye firmalarından teklif almaya başlayın.</string>
    <string name="tv_slider2">Nakliye firmanız mı var? Profesyonel bir şekilde taşımak mı istiyorsanız? İlanlara bakarak, teklif verebilirsiniz. BringIt, konumunuza göre ilanları getirir.</string>
    <string name="skip">Geç</string>
    <string name="get_starded">Başlayın</string>
    <string name="kullanici_adi">"Hoşgeldin: "</string>
    <string name="seen">Görüldü</string>
    <string name="delivered">İletildi</string>
    <string name="yeni_mesaj">Yeni Mesaj!</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-1002372938729651/2395463391</string>
    <string name="yukleme">Yükleniyor</string>
    <string name="hata">Hata!</string>
    <string name="fotograf_secilmedi">Fotoğraf seçilmedi!</string>
    <string name="yukleme_devam">Yükleme Devam Ediyor</string>
    <string name="arama">Arama</string>
    <string name="cikis_yapildi">Çıkış Yapıldı</string>
    <string name="cikis_yap">Çıkış Yap</string>


    <string-array name="tasinmaSekli">
        <item>Bina Merdiveni</item>
        <item>Bina Asansörü</item>
        <item>Asansör Kurulmasını İstiyorum</item>
    </string-array>

    <string-array name="katSayisi">
        <item>20.Kat</item>
        <item>19.Kat</item>
        <item>18.Kat</item>
        <item>17.Kat</item>
        <item>16.Kat</item>
        <item>15.Kat</item>
        <item>14.Kat</item>
        <item>13.Kat</item>
        <item>12.Kat</item>
        <item>11.Kat</item>
        <item>10.Kat</item>
        <item>9.Kat</item>
        <item>8.Kat</item>
        <item>7.Kat</item>
        <item>6.Kat</item>
        <item>5.Kat</item>
        <item>4.Kat</item>
        <item>3.Kat</item>
        <item>2.Kat</item>
        <item>1.Kat</item>
        <item>Zemin Kat</item>
        <item>-1.Kat</item>
        <item>-2.Kat</item>
    </string-array>

    <string-array name="odaSayisi">
        <item>1+1</item>
        <item>2+1</item>
        <item>3+1</item>
        <item>4+1</item>
        <item>5+1</item>
        <item>6+1</item>
        <item>7+1</item>

    </string-array>

</resources>
