<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        android:background="?attr/cardBackground"
        >

        <RelativeLayout
            android:background="?attr/cardBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etMailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/abeezee"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:hint="@string/mail_adresi"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMailAdress"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/abeezee"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:hint="@string/tel_no"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etUserWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etPhoneNo"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/abeezee"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:hint="@string/web_sitesi"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSave_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/etMailAdress"
                android:layout_alignParentTop="true"
                android:layout_marginTop="190dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_border"
                android:fontFamily="@font/abeezee"
                android:text="@string/kaydet"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCikis_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/etMailAdress"
                android:layout_alignTop="@+id/btnSave_1"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_button_border"
                android:fontFamily="@font/abeezee"
                android:text="@string/iptal"
                android:textColor="@color/white" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>