<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="?attr/backgroundcolor"
    tools:context="com.merttoptas.bringit.Activity.Fragment.OfferFragment">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="?attr/backgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/backgroundcolor"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".Activity.OfferActivity">


            <EditText
                android:id="@+id/tvBaslik"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="54dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/esyanin_basligi"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvEsyaSekli"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tvEsyaSekli"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/esyanin_tasinma_sekli"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="12sp"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/tvKatSayisi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBaslik" />


            <TextView
                android:id="@+id/tvKatSayisi"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:clickable="true"
                android:entries="@array/katSayisi"
                android:focusable="true"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/kat_sayisi"
                android:inputType="number"
                android:padding="10dp"
                android:textAlignment="textStart"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvetIl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEsyaSekli"
                tools:ignore="RtlCompat" />

            <AutoCompleteTextView
                android:id="@+id/tvetIl"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:dropDownWidth="wrap_content"
                android:dropDownHeight="wrap_content"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/e_yan_n_bulundu_u_l"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/mTtvIlce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvKatSayisi" />

            <AutoCompleteTextView
                android:id="@+id/mTtvIlce"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/llce"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvToIl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvetIl" />

            <AutoCompleteTextView
                android:id="@+id/tvToIl"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="false"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/esyanin_gidecegi_il"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/mTvToIlce"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTtvIlce" />

            <AutoCompleteTextView
                android:id="@+id/mTvToIlce"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:completionThreshold="2"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/esyanin_gidecegi_ilce"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/mTvKat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvToIl" />

            <TextView
                android:id="@+id/mTvKat"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spinner_layout_height"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:background="?attr/edittextcolor"
                android:clickable="true"
                android:ems="10"
                android:focusable="true"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/esyanin_cikacagi_kat_sayisi"
                android:inputType="number"
                android:padding="10dp"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/tvAciklama"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTvToIlce" />

            <EditText
                android:id="@+id/tvAciklama"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/edittextcolor"
                android:ems="10"
                android:fontFamily="@font/abeezee"
                android:gravity="bottom"
                android:hint="@string/aciklama"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:textSize="12sp"
                android:typeface="sans"
                app:layout_constraintBottom_toTopOf="@+id/btnSend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mTvKat"
                tools:ignore="RtlCompat" />


            <Button
                android:id="@+id/btnSend"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/reg_button_style"
                android:fontFamily="@font/abeezee"
                android:text="@string/ilan_ver"
                android:textAlignment="center"
                android:textColor="?attr/buttoncolor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAciklama" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</FrameLayout>
